add_library(experiment_common STATIC common.cpp)
target_link_libraries(experiment_common PUBLIC frequency_summary_lib)
target_include_directories(experiment_common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(sketch_benchmark main.cpp)
target_link_libraries(sketch_benchmark PRIVATE frequency_summary_lib)

add_executable(expansion_experiment main_expansion.cpp)
target_link_libraries(expansion_experiment PRIVATE frequency_summary_lib)