add_library(experiment_common STATIC common.cpp)
target_link_libraries(experiment_common PUBLIC frequency_summary_lib)
target_include_directories(experiment_common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(sketch_benchmark main.cpp)
target_link_libraries(sketch_benchmark PRIVATE experiment_common)

add_executable(expansion_experiment main_expansion.cpp)
target_link_libraries(expansion_experiment PRIVATE experiment_common)

add_executable(sensitivity_experiment main_sensitivity.cpp)
target_link_libraries(sensitivity_experiment PRIVATE experiment_common)

add_executable(merge_experiment main_merge.cpp)
target_link_libraries(merge_experiment PRIVATE experiment_common)

add_executable(split_experiment main_split.cpp)
target_link_libraries(split_experiment PRIVATE experiment_common)

add_executable(shrinking_experiment main_shrinking.cpp)
target_link_libraries(shrinking_experiment PRIVATE experiment_common)

add_executable(expansion_shrinking_experiment main_expansion_shrinking.cpp)
target_link_libraries(expansion_shrinking_experiment PRIVATE experiment_common)

add_executable(dag_experiment main_run_yaml.cpp)
target_link_libraries(dag_experiment PRIVATE experiment_common yaml-cpp)
